Add comprehensive templates: User Profile, Job Details, Job Search screens with navigation and localization

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -248,6 +248,56 @@
   "phone_or_email_hint": "e.g., +255767265780",
   "please_enter_phone_or_email": "Please enter your phone number or email",
   "invalid_credentials": "Invalid credentials",
+  "profile": "Profile",
+  "personal_information": "Personal Information",
+  "company_information": "Company Information",
+  "settings": "Settings",
+  "manage_notifications": "Manage your notifications",
+  "change_language": "Change app language",
+  "privacy_settings": "Privacy and security settings",
+  "profile_updated": "Profile updated successfully",
+  "please_enter_phone": "Please enter your phone number",
+  "please_enter_email": "Please enter your email",
+  "please_enter_valid_email": "Please enter a valid email address",
+  "please_enter_location": "Please enter your location",
+  "please_enter_company_name": "Please enter company name",
+  "job_seeker": "Job Seeker",
+  "job_provider": "Job Provider",
+  "language": "Language",
+  "privacy": "Privacy",
+  "delete_account": "Delete Account",
+  "delete_account_confirmation": "Are you sure you want to delete your account? This action cannot be undone.",
+  "bio": "Bio",
+  "company_name": "Company Name",
+  "website": "Website",
+  "job_saved": "Job saved to your list",
+  "job_removed_from_saved": "Job removed from saved list",
+  "job_shared": "Job shared successfully",
+  "requirements": "Requirements",
+  "about_provider": "About the Provider",
+  "location_and_schedule": "Location & Schedule",
+  "schedule": "Schedule",
+  "start_date": "Start Date",
+  "payment_details": "Payment Details",
+  "payment_amount": "Payment Amount",
+  "payment_method": "Payment Method",
+  "similar_jobs": "Similar Jobs",
+  "contact_provider": "Contact",
+  "apply_now": "Apply Now",
+  "contacting_provider": "Contacting provider...",
+  "application_sent": "Application Sent!",
+  "application_sent_message": "Your application has been sent successfully. The provider will review your application and contact you soon.",
+  "search_jobs": "Search Jobs",
+  "search_jobs_placeholder": "Search for jobs, locations, or categories...",
+  "no_jobs_found": "No jobs found",
+  "try_different_search": "Try adjusting your search criteria or filters",
+  "filters": "Filters",
+  "location": "Location",
+  "all_locations": "All Locations",
+  "sort_by": "Sort By",
+  "most_recent": "Most Recent",
+  "highest_payment": "Highest Payment",
+  "lowest_payment": "Lowest Payment",
   "verify_otp": "Verify OTP",
   "enter_otp_sent_to_phone": "Enter the OTP sent to your phone number",
   "enter_complete_otp": "Please enter the complete 6-digit OTP",
