--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -248,6 +248,56 @@
   "phone_or_email_hint": "mfano: +255767265780",
   "please_enter_phone_or_email": "Tafadhali weka namba ya simu au barua pepe",
   "invalid_credentials": "Maelezo si sahihi",
+  "profile": "Wasifu",
+  "personal_information": "Maelezo Binafsi",
+  "company_information": "Maelezo ya Kampuni",
+  "settings": "Mipangilio",
+  "manage_notifications": "Dhibiti arifa zako",
+  "change_language": "Badilisha lugha ya programu",
+  "privacy_settings": "Mipangilio ya faragha na usalama",
+  "profile_updated": "Wasifu umesasishwa kwa mafanikio",
+  "please_enter_phone": "Tafadhali weka namba ya simu yako",
+  "please_enter_email": "Tafadhali weka barua pepe yako",
+  "please_enter_valid_email": "Tafadhali weka barua pepe sahihi",
+  "please_enter_location": "Tafadhali weka mahali pako",
+  "please_enter_company_name": "Tafadhali weka jina la kampuni",
+  "job_seeker": "Mtafuta Kazi",
+  "job_provider": "Mtoa Kazi",
+  "language": "Lugha",
+  "privacy": "Faragha",
+  "delete_account": "Futa Akaunti",
+  "delete_account_confirmation": "Una uhakika unataka kufuta akaunti yako? Kitendo hiki hakiwezi kurekebishwa.",
+  "bio": "Wasifu",
+  "company_name": "Jina la Kampuni",
+  "website": "Tovuti",
+  "job_saved": "Kazi imehifadhiwa kwenye orodha yako",
+  "job_removed_from_saved": "Kazi imeondolewa kutoka kwenye orodha ya kuhifadhiwa",
+  "job_shared": "Kazi imeshirikiwa kwa mafanikio",
+  "requirements": "Mahitaji",
+  "about_provider": "Kuhusu Mtoa Kazi",
+  "location_and_schedule": "Mahali na Ratiba",
+  "schedule": "Ratiba",
+  "start_date": "Tarehe ya Kuanza",
+  "payment_details": "Maelezo ya Malipo",
+  "payment_amount": "Kiasi cha Malipo",
+  "payment_method": "Njia ya Malipo",
+  "similar_jobs": "Kazi Zinazofanana",
+  "contact_provider": "Wasiliana",
+  "apply_now": "Omba Sasa",
+  "contacting_provider": "Inawasiliana na mtoa kazi...",
+  "application_sent": "Ombi Limewasilishwa!",
+  "application_sent_message": "Ombi lako limewasilishwa kwa mafanikio. Mtoa kazi atakagua ombi lako na kukusiliana nawe hivi karibuni.",
+  "search_jobs": "Tafuta Kazi",
+  "search_jobs_placeholder": "Tafuta kazi, mahali, au jamii...",
+  "no_jobs_found": "Hakuna kazi zilizopatikana",
+  "try_different_search": "Jaribu kubadilisha vigezo vya utafutaji au vichujio",
+  "filters": "Vichujio",
+  "location": "Mahali",
+  "all_locations": "Mahali Yote",
+  "sort_by": "Panga Kwa",
+  "most_recent": "Ya Hivi Karibuni",
+  "highest_payment": "Malipo ya Juu",
+  "lowest_payment": "Malipo ya Chini",
   "verify_otp": "Thibitisha OTP",
   "enter_otp_sent_to_phone": "Weka namba ya uthibitishaji iliyotumwa kwenye namba yako ya simu",
   "enter_complete_otp": "Tafadhali weka namba ya uthibitishaji kamili",
