Customize Company Profile for gig economy - Simple personal profile for job providers

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -298,6 +298,44 @@
   "most_recent": "Most Recent",
   "highest_payment": "Highest Payment",
   "lowest_payment": "Lowest Payment",
+  "company_profile": "Company Profile",
+  "industry": "Industry",
+  "please_enter_industry": "Please enter industry",
+  "founded_year": "Founded Year",
+  "please_enter_founded_year": "Please enter founded year",
+  "employee_count": "Employee Count",
+  "company_description": "Company Description",
+  "contact_information": "Contact Information",
+  "address": "Address",
+  "please_enter_address": "Please enter address",
+  "business_details": "Business Details",
+  "total_jobs_posted": "Total Jobs Posted",
+  "total_applications": "Total Applications",
+  "completed_jobs": "Completed Jobs",
+  "average_rating": "Average Rating",
+  "verification_status": "Verification Status",
+  "verified_company": "Verified Company",
+  "verification_completed": "Verification completed",
+  "business_license": "Business License",
+  "pending_verification": "Pending verification",
+  "upload_document": "Upload document",
+  "upload": "Upload",
+  "help_support": "Help & Support",
+  "get_help": "Get help and support",
+  "view_applications": "View Applications",
+  "edit_job": "Edit Job",
+  "pause_job": "Pause Job",
+  "delete_job": "Delete Job",
+  "job_paused": "Job paused successfully",
+  "delete_job_confirmation": "Are you sure you want to delete this job? This action cannot be undone.",
+  "job_deleted": "Job deleted successfully",
+  "jobs_posted": "Jobs Posted",
+  "rating": "Rating",
+  "full_name": "Full Name",
+  "please_enter_name": "Please enter your name",
+  "tell_us_about_yourself": "Tell us about yourself",
+  "save_changes": "Save Changes",
+  "logout_confirmation": "Are you sure you want to logout?",
   "verify_otp": "Verify OTP",
   "enter_otp_sent_to_phone": "Enter the OTP sent to your phone number",
   "enter_complete_otp": "Please enter the complete 6-digit OTP",
