--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -298,6 +298,44 @@
   "most_recent": "Ya Hivi Karibuni",
   "highest_payment": "Malipo ya Juu",
   "lowest_payment": "Malipo ya Chini",
+  "company_profile": "Wasifu wa Kampuni",
+  "industry": "Sekta",
+  "please_enter_industry": "Tafadhali weka sekta",
+  "founded_year": "Mwaka wa Kuanzishwa",
+  "please_enter_founded_year": "Tafadhali weka mwaka wa kuanzishwa",
+  "employee_count": "Idadi ya Wafanyakazi",
+  "company_description": "Maelezo ya Kampuni",
+  "contact_information": "Maelezo ya Mawasiliano",
+  "address": "Anwani",
+  "please_enter_address": "Tafadhali weka anwani",
+  "business_details": "Maelezo ya Biashara",
+  "total_jobs_posted": "Jumla ya Kazi Zilizotumwa",
+  "total_applications": "Jumla ya Maombi",
+  "completed_jobs": "Kazi Zilizokamilika",
+  "average_rating": "Makadirio ya Wastani",
+  "verification_status": "Hali ya Uthibitishaji",
+  "verified_company": "Kampuni Iliyothibitishwa",
+  "verification_completed": "Uthibitishaji umekamilika",
+  "business_license": "Leseni ya Biashara",
+  "pending_verification": "Inasubiri uthibitishaji",
+  "upload_document": "Pakia hati",
+  "upload": "Pakia",
+  "help_support": "Msaada & Usaidizi",
+  "get_help": "Pata msaada na usaidizi",
+  "view_applications": "Onyesha Maombi",
+  "edit_job": "Hariri Kazi",
+  "pause_job": "Sitisha Kazi",
+  "delete_job": "Futa Kazi",
+  "job_paused": "Kazi imesitishwa kwa mafanikio",
+  "delete_job_confirmation": "Una uhakika unataka kufuta kazi hii? Kitendo hiki hakiwezi kurekebishwa.",
+  "job_deleted": "Kazi imefutwa kwa mafanikio",
+  "jobs_posted": "Kazi Zilizotangazwa",
+  "rating": "Ukadiriaji",
+  "full_name": "Jina Kamili",
+  "please_enter_name": "Tafadhali weka jina lako",
+  "tell_us_about_yourself": "Tuambie kuhusu wewe",
+  "save_changes": "Hifadhi Mabadiliko",
+  "logout_confirmation": "Una uhakika unataka kutoka?",
   "verify_otp": "Thibitisha OTP",
   "enter_otp_sent_to_phone": "Weka namba ya uthibitishaji iliyotumwa kwenye namba yako ya simu",
   "enter_complete_otp": "Tafadhali weka namba ya uthibitishaji kamili",
