Implement comprehensive wallet system with payment integration - Add wallet model, service, screens, and application fee system

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -336,6 +336,53 @@
   "tell_us_about_yourself": "Tell us about yourself",
   "save_changes": "Save Changes",
   "logout_confirmation": "Are you sure you want to logout?",
+  "wallet": "Wallet",
+  "current_balance": "Current Balance",
+  "top_up": "Top Up",
+  "add_balance": "Add Balance",
+  "history": "History",
+  "quick_actions": "Quick Actions",
+  "add_money": "Add Money",
+  "transactions": "Transactions",
+  "view_history": "View History",
+  "help": "Help",
+  "get_support": "Get Support",
+  "info": "Info",
+  "wallet_info": "Wallet Info",
+  "recent_transactions": "Recent Transactions",
+  "view_all": "View All",
+  "no_transactions": "No transactions yet",
+  "top_up_wallet": "Top Up Wallet",
+  "select_amount": "Select Amount",
+  "custom_amount": "Custom Amount",
+  "please_enter_amount": "Please enter amount",
+  "please_enter_valid_amount": "Please enter a valid amount",
+  "minimum_amount_1000": "Minimum amount is TZS 1,000",
+  "payment_method": "Payment Method",
+  "phone_number": "Phone Number",
+  "enter_phone_number": "Enter Phone Number",
+  "please_enter_phone": "Please enter phone number",
+  "please_enter_valid_phone": "Please enter a valid phone number",
+  "please_select_payment_method": "Please select a payment method",
+  "amount": "Amount",
+  "fee": "Fee",
+  "total": "Total",
+  "process_payment": "Process Payment",
+  "payment_successful": "Payment successful!",
+  "payment_failed": "Payment failed. Please try again.",
+  "payment_error": "Payment error occurred.",
+  "transaction_history": "Transaction History",
+  "wallet_help": "Wallet Help",
+  "wallet_help_message": "You can add money to your wallet using mobile money or bank transfer. Each job application costs TZS 500.",
+  "wallet_info": "Wallet Information",
+  "application_fee_info": "Each job application costs TZS 500",
+  "top_up_info": "You can top up using M-Pesa, Tigo Pesa, Airtel Money, or Bank Transfer",
+  "bonus_info": "Earn bonuses for referrals and completing jobs",
+  "insufficient_balance": "Insufficient Balance",
+  "insufficient_balance_message": "You need at least TZS 500 to apply for this job. Please top up your wallet.",
+  "application_fee": "Application Fee",
+  "application_fee_confirmation": "This job application will cost TZS 500 from your wallet. Do you want to continue?",
+  "apply": "Apply",
   "verify_otp": "Verify OTP",
   "enter_otp_sent_to_phone": "Enter the OTP sent to your phone number",
   "enter_complete_otp": "Please enter the complete 6-digit OTP",
