--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -336,6 +336,53 @@
   "tell_us_about_yourself": "Tuambie kuhusu wewe",
   "save_changes": "Hifadhi Mabadiliko",
   "logout_confirmation": "Una uhakika unataka kutoka?",
+  "wallet": "Mkoba wa Pesa",
+  "current_balance": "Salio la Sasa",
+  "top_up": "Ongeza Pesa",
+  "add_balance": "Ongeza Salio",
+  "history": "Historia",
+  "quick_actions": "Vitendo vya Haraka",
+  "add_money": "Ongeza Pesa",
+  "transactions": "Miamala",
+  "view_history": "Onyesha Historia",
+  "help": "Msaada",
+  "get_support": "Pata Msaada",
+  "info": "Maelezo",
+  "wallet_info": "Maelezo ya Mkoba",
+  "recent_transactions": "Miamala ya Hivi Karibuni",
+  "view_all": "Onyesha Yote",
+  "no_transactions": "Hakuna miamala bado",
+  "top_up_wallet": "Ongeza Pesa kwenye Mkoba",
+  "select_amount": "Chagua Kiasi",
+  "custom_amount": "Kiasi Maalum",
+  "please_enter_amount": "Tafadhali weka kiasi",
+  "please_enter_valid_amount": "Tafadhali weka kiasi sahihi",
+  "minimum_amount_1000": "Kiasi cha chini ni TZS 1,000",
+  "payment_method": "Njia ya Malipo",
+  "phone_number": "Namba ya Simu",
+  "enter_phone_number": "Weka Namba ya Simu",
+  "please_enter_phone": "Tafadhali weka namba ya simu",
+  "please_enter_valid_phone": "Tafadhali weka namba sahihi ya simu",
+  "please_select_payment_method": "Tafadhali chagua njia ya malipo",
+  "amount": "Kiasi",
+  "fee": "Ada",
+  "total": "Jumla",
+  "process_payment": "Fanya Malipo",
+  "payment_successful": "Malipo yamefanikiwa!",
+  "payment_failed": "Malipo yameshindwa. Jaribu tena.",
+  "payment_error": "Hitilafu ya malipo imetokea.",
+  "transaction_history": "Historia ya Miamala",
+  "wallet_help": "Msaada wa Mkoba",
+  "wallet_help_message": "Unaweza kuongeza pesa kwenye mkoba wako kwa kutumia pesa ya simu au uhamisho wa benki. Kila ombi la kazi linagharimu TZS 500.",
+  "wallet_info": "Maelezo ya Mkoba wa Pesa",
+  "application_fee_info": "Kila ombi la kazi linagharimu TZS 500",
+  "top_up_info": "Unaweza kuongeza pesa kwa kutumia M-Pesa, Tigo Pesa, Airtel Money, au Uhamisho wa Benki",
+  "bonus_info": "Pata bonasi kwa kurejelea na kukamilisha kazi",
+  "insufficient_balance": "Salio Haitoshi",
+  "insufficient_balance_message": "Unahitaji angalau TZS 500 kuomba kazi hii. Tafadhali ongeza pesa kwenye mkoba wako.",
+  "application_fee": "Ada ya Ombi",
+  "application_fee_confirmation": "Ombi hili la kazi litagharimu TZS 500 kutoka kwenye mkoba wako. Unataka kuendelea?",
+  "apply": "Omba",
   "verify_otp": "Thibitisha OTP",
   "enter_otp_sent_to_phone": "Weka namba ya uthibitishaji iliyotumwa kwenye namba yako ya simu",
   "enter_complete_otp": "Tafadhali weka namba ya uthibitishaji kamili",
