--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -471,5 +471,103 @@
   "2_days": "Siku 2",
   "1_week": "Wiki 1",
   "messages": "Ujumbe",
-  "type_message": "Andika ujumbe..."
+  "type_message": "Andika ujumbe...",
+  
+  "analytics_dashboard": "Dashibodi ya Uchambuzi",
+  "analytics_summary": "Muhtasari wa Uchambuzi",
+  "wallet_analytics": "Uchambuzi wa Mkoba wa Pesa",
+  "revenue_analytics": "Uchambuzi wa Mapato",
+  "user_analytics": "Uchambuzi wa Watumiaji",
+  "business_analytics": "Uchambuzi wa Biashara",
+  "period": "Kipindi",
+  "last_7_days": "Siku 7 za mwisho",
+  "last_30_days": "Siku 30 za mwisho",
+  "last_90_days": "Siku 90 za mwisho",
+  "last_year": "Mwaka uliopita",
+  "wallet": "Mkoba wa Pesa",
+  "revenue": "Mapato",
+  "users": "Watumiaji",
+  "business": "Biashara",
+  "total_balance": "Jumla ya Salio",
+  "total_top_ups": "Jumla ya Kuongeza Pesa",
+  "application_fees": "Ada za Maombi",
+  "total_transactions": "Jumla ya Miamala",
+  "bonuses": "Bonasi",
+  "transaction_trends": "Mwelekeo wa Miamala",
+  "payment_methods": "Njia za Malipo",
+  "total_revenue": "Jumla ya Mapato",
+  "application_fee_revenue": "Mapato ya Ada za Maombi",
+  "commission_revenue": "Mapato ya Komisheni",
+  "premium_revenue": "Mapato ya Huduma za Juu",
+  "monthly_revenue": "Mapato ya Mwezi",
+  "weekly_revenue": "Mapato ya Wiki",
+  "daily_revenue": "Mapato ya Siku",
+  "revenue_trends": "Mwelekeo wa Mapato",
+  "revenue_sources": "Vyanzo vya Mapato",
+  "total_users": "Jumla ya Watumiaji",
+  "active_users": "Watumiaji Waliofanya Kazi",
+  "new_users": "Watumiaji Wapya",
+  "returning_users": "Watumiaji Waliorudi",
+  "average_session_duration": "Muda wa Wastani wa Kipindi",
+  "total_sessions": "Jumla ya Vipindi",
+  "user_activities": "Shughuli za Watumiaji",
+  "user_segments": "Sehemu za Watumiaji",
+  "total_jobs": "Jumla ya Kazi",
+  "active_jobs": "Kazi Zinazofanya Kazi",
+  "completed_jobs": "Kazi Zilizokamilika",
+  "total_applications": "Jumla ya Maombi",
+  "average_job_value": "Thamani ya Wastani ya Kazi",
+  "completion_rate": "Kiwango cha Ukamilifu",
+  "application_success_rate": "Kiwango cha Mafanikio ya Maombi",
+  "job_category_metrics": "Vipimo vya Aina za Kazi",
+  "location_metrics": "Vipimo vya Mahali",
+  "job_applications": "Maombi ya Kazi",
+  "wallet_top_ups": "Kuongeza Pesa kwenye Mkoba",
+  "job_postings": "Kutuma Kazi",
+  "profile_updates": "Kusasisha Wasifu",
+  "job_seekers": "Watafuta Kazi",
+  "job_providers": "Watoa Kazi",
+  "minutes": "dakika",
+  "jobs": "kazi",
+  "applications": "maombi",
+  "users": "watumiaji",
+  "transactions": "miamala",
+  "analytics_not_available": "Uchambuzi haupo",
+  "loading_analytics": "Inapakia uchambuzi...",
+  "error_loading_analytics": "Hitilafu ya kupakia uchambuzi",
+  "no_analytics_data": "Hakuna data ya uchambuzi inayopatikana",
+  "refresh_analytics": "Onyesha Uchambuzi Upya",
+  "view_detailed_analytics": "Onyesha Uchambuzi wa Undani",
+  "quick_metrics": "Vipimo vya Haraka",
+  "detailed_metrics": "Vipimo vya Undani",
+  "trends": "Mielekeo",
+  "performance": "Utendaji",
+  "insights": "Ufahamu",
+  "overview": "Muhtasari",
+  "details": "Maelezo",
+  "summary": "Muhtasari",
+  "breakdown": "Mgawanyiko",
+  "distribution": "Usambazaji",
+  "comparison": "Ulinganisho",
+  "growth": "Ukuaji",
+  "decline": "Kupungua",
+  "stable": "Thabiti",
+  "improving": "Inaboresha",
+  "declining": "Inapungua",
+  "excellent": "Bora",
+  "good": "Nzuri",
+  "average": "Wastani",
+  "poor": "Mbaya",
+  "very_poor": "Mbaya Sana",
+  "top_performer": "Mwenye Utendaji Bora",
+  "needs_improvement": "Inahitaji Kuboreshwa",
+  "on_track": "Kwenye Mwelekeo",
+  "behind_schedule": "Nyuma ya Ratiba",
+  "ahead_of_schedule": "Mbele ya Ratiba",
+  "target_met": "Lengo Limefikwa",
+  "target_exceeded": "Lengo Limezidiwa",
+  "target_missed": "Lengo Halijafikiwa",
+  "my_analytics": "Uchambuzi Wangu",
+  "select_language": "Chagua Lugha",
+  "language_changed": "Lugha imebadilishwa kwa mafanikio"
 } 
