feat: implement location services and fix navigation issues
- Add location services with GPS integration and permission handling
- Add location-based job search with distance calculation
- Add location permission request screen
- Fix back navigation on job provider applications page
- Add job seeker profile viewing from applications
- Simplify analytics system and remove complex dashboard
- Add splash screen with animated logo
- Set Kiswahili as default language
- Add app logo to auth pages
- Update Android minSdk to 21 for location services
- Add location permissions for Android and iOS

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -198,6 +198,25 @@
   "punctuation": "Punctuation",
   "space": "Space",
   "tab": "Tab",
+  
+  // Location Services
+  "location_permission": "Location Permission",
+  "enable_location": "Enable Location",
+  "location_permission_description": "Allow Kazi Huru to access your location to find nearby jobs and provide better service.",
+  "find_nearby_jobs": "Find Nearby Jobs",
+  "find_nearby_jobs_desc": "Discover jobs in your area",
+  "get_directions": "Get Directions",
+  "get_directions_desc": "Navigate to job locations easily",
+  "save_time": "Save Time",
+  "save_time_desc": "Find jobs closer to you",
+  "skip_for_now": "Skip for now",
+  "location_services_disabled": "Location Services Disabled",
+  "enable_location_services_message": "Please enable location services in your device settings to use this feature.",
+  "permission_denied": "Permission Denied",
+  "location_permission_denied_message": "Location permission is required to find nearby jobs. Please grant permission in settings.",
+  "location_error_message": "Unable to get your location. Please check your device settings and try again.",
+  "nearby": "Nearby",
+  "distance": "Distance",
   "newline": "Newline",
   "carriage_return": "Carriage Return",
   "line_feed": "Line Feed",
