--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -198,6 +198,25 @@
   "punctuation": "Alama za uakifishaji",
   "space": "Nafasi",
   "tab": "Tabu",
+  
+  // Location Services
+  "location_permission": "Ruhusa ya Mahali",
+  "enable_location": "Washa Mahali",
+  "location_permission_description": "Ruhusu Kazi Huru kufikia mahali pako ili kupata kazi za karibu na kutoa huduma bora.",
+  "find_nearby_jobs": "Pata Kazi za Karibu",
+  "find_nearby_jobs_desc": "Tafuta kazi katika eneo lako",
+  "get_directions": "Pata Mwelekeo",
+  "get_directions_desc": "Nenda kwenye mahali pa kazi kwa urahisi",
+  "save_time": "Okoa Muda",
+  "save_time_desc": "Pata kazi karibu nawe",
+  "skip_for_now": "Ruka kwa sasa",
+  "location_services_disabled": "Huduma za Mahali Zimezimwa",
+  "enable_location_services_message": "Tafadhali washa huduma za mahali katika mipangilio ya kifaa chako ili kutumia kipengele hiki.",
+  "permission_denied": "Ruhusa Imekataliwa",
+  "location_permission_denied_message": "Ruhusa ya mahali inahitajika kupata kazi za karibu. Tafadhali toa ruhusa katika mipangilio.",
+  "location_error_message": "Hawezi kupata mahali pako. Tafadhali angalia mipangilio ya kifaa chako na jaribu tena.",
+  "nearby": "Karibu",
+  "distance": "Umbali",
   "newline": "Mstari mpya",
   "carriage_return": "Kurudi kwa gari",
   "line_feed": "Kulisha mstari",
