Add Google Maps navigation and improve ID verification UI
- Add MapsService with navigation, distance calculation, and location services
- Add navigation button to job details screen
- Add distance and estimated time display to job search
- Improve ID verification screen design to match app theme
- Remove duplicate full name field from verification
- Add proper error handling and translations
- Update job cards with navigation and time estimates
- Fix JSON format errors in translation files

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -198,8 +198,6 @@
   "punctuation": "Punctuation",
   "space": "Space",
   "tab": "Tab",
-  
-  // Location Services
   "location_permission": "Location Permission",
   "enable_location": "Enable Location",
   "location_permission_description": "Allow Kazi Huru to access your location to find nearby jobs and provide better service.",
@@ -588,5 +586,63 @@
   "target_missed": "Target Missed",
   "my_analytics": "My Analytics",
   "select_language": "Select Language",
-  "language_changed": "Language changed successfully"
+  "language_changed": "Language changed successfully",
+  "id_verification": "ID Verification",
+  "verify_identity": "Verify Identity",
+  "verify_identity_desc": "Upload a clear photo of your ID to verify your identity and get full platform access.",
+  "upload_id_image": "Upload ID Image",
+  "upload_id_desc": "Upload a clear photo of your ID (NIDA, driver's license, etc.)",
+  "take_photo": "Take Photo",
+  "choose_photo": "Choose Photo",
+  "id_number": "ID Number",
+  "enter_id_number": "Enter ID number",
+  "please_enter_id_number": "Please enter ID number",
+  "full_name": "Full Name",
+  "enter_full_name": "Enter full name",
+  "please_enter_full_name": "Please enter full name",
+  "submit_verification": "Submit Verification",
+  "verification_submitted": "Verification Submitted",
+  "verification_submitted_message": "Your verification has been submitted successfully. It will be reviewed by our team and you'll receive a response soon.",
+  "verification_status": "Verification Status",
+  "not_verified": "Not Verified",
+  "not_verified_desc": "You haven't verified your identity yet. Verify to get full access.",
+  "verify_now": "Verify Now",
+  "verification_pending": "Verification Pending",
+  "verification_pending_desc": "Your verification is being reviewed by our team. You'll receive a response soon.",
+  "verification_verified": "Verified",
+  "verification_verified_desc": "Your verification is complete. You can use all platform features.",
+  "verification_rejected": "Rejected",
+  "verification_rejected_desc": "Your verification was rejected. Please check the reason and try again.",
+  "verification_unknown": "Unknown Status",
+  "verification_unknown_desc": "Your verification status is unknown. Please resubmit.",
+  "rejection_reason": "Rejection Reason",
+  "resubmit_verification": "Resubmit Verification",
+  "verification_details": "Verification Details",
+  "submitted_date": "Submitted Date",
+  "verified_date": "Verified Date",
+  "verified_by": "Verified By",
+  "admin_verification": "Admin Verification",
+  "no_pending_verifications": "No Pending Verifications",
+  "no_pending_verifications_desc": "There are no verifications waiting for review.",
+  "pending": "Pending",
+  "approve": "Approve",
+  "reject": "Reject",
+  "reject_verification": "Reject Verification",
+  "reject_reason_required": "Rejection reason is required",
+  "enter_rejection_reason": "Enter rejection reason",
+  "cancel": "Cancel",
+  "user_id": "User ID",
+  "ok": "OK",
+  "verification_required": "Verification Required",
+  "verification_required_desc": "You need to verify your identity before posting jobs. This helps build trust.",
+  "check_verification_status": "Check verification status",
+  "get_directions": "Get Directions",
+  "navigation_failed": "Failed to open maps",
+  "open_in_maps": "Open in Maps",
+  "estimated_time": "Estimated Time",
+  "distance_away": "Distance Away",
+  "error_picking_image": "Error picking image",
+  "please_select_id_image": "Please select an ID image",
+  "verification_submission_failed": "Failed to submit verification. Please try again.",
+  "verification_error": "Verification error"
 } 
