--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -198,8 +198,6 @@
   "punctuation": "Alama za uakifishaji",
   "space": "Nafasi",
   "tab": "Tabu",
-  
-  // Location Services
   "location_permission": "Ruhusa ya Mahali",
   "enable_location": "Washa Mahali",
   "location_permission_description": "Ruhusu Kazi Huru kufikia mahali pako ili kupata kazi za karibu na kutoa huduma bora.",
@@ -588,5 +586,64 @@
   "target_missed": "Lengo Halijafikiwa",
   "my_analytics": "Uchambuzi Wangu",
   "select_language": "Chagua Lugha",
-  "language_changed": "Lugha imebadilishwa kwa mafanikio"
+  "language_changed": "Lugha imebadilishwa kwa mafanikio",
+  "wallet_help": "Msaada wa Mkoba",
+  "id_verification": "Uthibitishaji wa Kitambulisho",
+  "verify_identity": "Thibitisha Utambulisho",
+  "verify_identity_desc": "Weka picha ya kitambulisho chako ili kuthibitisha utambulisho wako na kupata ufikiaji kamili wa platform.",
+  "upload_id_image": "Pakia Picha ya Kitambulisho",
+  "upload_id_desc": "Pakia picha wazi ya kitambulisho chako (NIDA, leseni ya udereva, nk)",
+  "take_photo": "Piga Picha",
+  "choose_photo": "Chagua Picha",
+  "id_number": "Namba ya Kitambulisho",
+  "enter_id_number": "Weka namba ya kitambulisho",
+  "please_enter_id_number": "Tafadhali weka namba ya kitambulisho",
+  "full_name": "Jina Kamili",
+  "enter_full_name": "Weka jina kamili",
+  "please_enter_full_name": "Tafadhali weka jina kamili",
+  "submit_verification": "Wasilisha Uthibitishaji",
+  "verification_submitted": "Uthibitishaji Umewasilishwa",
+  "verification_submitted_message": "Uthibitishaji wako umewasilishwa kwa mafanikio. Itakaguliwa na timu yetu na utapata majibu hivi karibuni.",
+  "verification_status": "Hali ya Uthibitishaji",
+  "not_verified": "Haijathibitishwa",
+  "not_verified_desc": "Hujathibitisha utambulisho wako bado. Thibitisha ili kupata ufikiaji kamili.",
+  "verify_now": "Thibitisha Sasa",
+  "verification_pending": "Inasubiri Uthibitishaji",
+  "verification_pending_desc": "Uthibitishaji wako unakaguliwa na timu yetu. Utapata majibu hivi karibuni.",
+  "verification_verified": "Imeathibitishwa",
+  "verification_verified_desc": "Uthibitishaji wako umekamilika. Unaweza kutumia platform yote.",
+  "verification_rejected": "Imeikataliwa",
+  "verification_rejected_desc": "Uthibitishaji wako umekataliwa. Tafadhali angalia sababu na jaribu tena.",
+  "verification_unknown": "Hali Isiyojulikana",
+  "verification_unknown_desc": "Hali ya uthibitishaji wako haijulikani. Tafadhali wasilisha tena.",
+  "rejection_reason": "Sababu ya Kukataliwa",
+  "resubmit_verification": "Wasilisha Uthibitishaji Tena",
+  "verification_details": "Maelezo ya Uthibitishaji",
+  "submitted_date": "Tarehe ya Kuwasilisha",
+  "verified_date": "Tarehe ya Uthibitishaji",
+  "verified_by": "Iliathibitishwa na",
+  "admin_verification": "Uthibitishaji wa Msimamizi",
+  "no_pending_verifications": "Hakuna Uthibitishaji Unaosubiri",
+  "no_pending_verifications_desc": "Hakuna uthibitishaji unaosubiri kukaguliwa.",
+  "pending": "Inasubiri",
+  "approve": "Idhinisha",
+  "reject": "Kataa",
+  "reject_verification": "Kataa Uthibitishaji",
+  "reject_reason_required": "Sababu ya kukataliwa inahitajika",
+  "enter_rejection_reason": "Weka sababu ya kukataliwa",
+  "cancel": "Ghairi",
+  "user_id": "Kitambulisho cha Mtumiaji",
+  "ok": "Sawa",
+  "verification_required": "Uthibitishaji Unahitajika",
+  "verification_required_desc": "Unahitaji kuthibitisha utambulisho wako kabla ya kupost kazi. Hii inasaidia kujenga uaminifu.",
+  "check_verification_status": "Angalia hali ya uthibitishaji",
+  "get_directions": "Pata Mwelekeo",
+  "navigation_failed": "Imeshindwa kufungua ramani",
+  "open_in_maps": "Fungua kwenye Ramani",
+  "estimated_time": "Muda wa Makadirio",
+  "distance_away": "Umbali",
+  "error_picking_image": "Hitilafu ya kuchagua picha",
+  "please_select_id_image": "Tafadhali chagua picha ya kitambulisho",
+  "verification_submission_failed": "Imeshindwa kuwasilisha uthibitishaji. Jaribu tena.",
+  "verification_error": "Hitilafu ya uthibitishaji"
 } 
