Redesign user profile screen: professional, simple, and classic layout with job tracking features

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -248,6 +248,21 @@
   "byte_order_mark_utf_8": "Byte Order Mark UTF-8",
   "byte_order_mark_utf_16_le": "Byte Order Mark UTF-16 LE",
   "byte_order_mark_utf_16_be": "Byte Order Mark UTF-16 BE",
+  "notification_details": "Notification Details",
+  "notification_not_found": "Notification not found",
+  "message": "Message",
+  "actions": "Actions",
+  "job_application": "Job Application",
+  "job_accepted": "Job Accepted",
+  "job_rejected": "Job Rejected",
+  "payment": "Payment",
+  "verification": "Verification",
+  "chat": "Chat",
+  "system": "System",
+  "days_ago": "days ago",
+  "hours_ago": "hours ago",
+  "minutes_ago": "minutes ago",
+  "just_now": "just now",
   "byte_order_mark_utf_32_le": "Byte Order Mark UTF-32 LE",
   "byte_order_mark_utf_32_be": "Byte Order Mark UTF-32 BE",
   "byte_order_mark_utf_7": "Byte Order Mark UTF-7",
@@ -488,6 +503,19 @@
   "2_days": "2 Days",
   "1_week": "1 Week",
   "messages": "Messages",
+  "no_messages_yet": "No messages yet",
+  "start_conversation": "Start a conversation with job seekers or providers",
+  "online": "Online",
+  "type_message": "Type a message...",
+  "clear_chat": "Clear Chat",
+  "clear_chat_confirmation": "Are you sure you want to clear all messages?",
+  "block_user": "Block User",
+  "report_user": "Report User",
+  "photo": "Photo",
+  "location": "Location",
+  "document": "Document",
+  "cancel": "Cancel",
+  "clear": "Clear",
   "type_message": "Type a message...",
   
   "analytics_dashboard": "Analytics Dashboard",
