--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -488,7 +488,19 @@
   "2_days": "Siku 2",
   "1_week": "Wiki 1",
   "messages": "Ujumbe",
+  "no_messages_yet": "Hakuna ujumbe bado",
+  "start_conversation": "Anza mazungumzo na watafuta kazi au watoa kazi",
+  "online": "Mtandaoni",
   "type_message": "Andika ujumbe...",
+  "clear_chat": "Futa Mazungumzo",
+  "clear_chat_confirmation": "Una uhakika unataka kufuta ujumbe wote?",
+  "block_user": "Kizuia Mtumiaji",
+  "report_user": "Ripoti Mtumiaji",
+  "photo": "Picha",
+  "location": "Mahali",
+  "document": "Nyaraka",
+  "cancel": "Ghairi",
+  "clear": "Futa",
   
   "analytics_dashboard": "Dashibodi ya Uchambuzi",
   "analytics_summary": "Muhtasari wa Uchambuzi",
@@ -645,5 +657,20 @@
   "error_picking_image": "Hitilafu ya kuchagua picha",
   "please_select_id_image": "Tafadhali chagua picha ya kitambulisho",
   "verification_submission_failed": "Imeshindwa kuwasilisha uthibitishaji. Jaribu tena.",
-  "verification_error": "Hitilafu ya uthibitishaji"
+  "verification_error": "Hitilafu ya uthibitishaji",
+  "notification_details": "Maelezo ya Arifa",
+  "notification_not_found": "Arifa haijapatikana",
+  "message": "Ujumbe",
+  "actions": "Vitendo",
+  "job_application": "Ombi la Kazi",
+  "job_accepted": "Kazi Imeidhinishwa",
+  "job_rejected": "Kazi Imekataliwa",
+  "payment": "Malipo",
+  "verification": "Uthibitishaji",
+  "chat": "Mazungumzo",
+  "system": "Mfumo",
+  "days_ago": "siku zilizopita",
+  "hours_ago": "saa zilizopita",
+  "minutes_ago": "dakika zilizopita",
+  "just_now": "sasa hivi"
 } 
